--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -22,6 +22,7 @@
     "gulp-concat": "~2.6.0",
     "gulp-cssnano": "~2.1.1",
     "gulp-imagemin": "~2.4.0",
+    "gulp-less": "^3.1.0",
     "gulp-pug": "^1.2.0",
     "gulp-rigger": "~0.5.8",
     "gulp-sass": "~2.2.0",
